Calculator/Mutants/Mutant_18/report.txt
Mutants\Mutant_18\calculator\ExpressionParser.java:72: error: duplicate case label
            case '/':
            ^
1 error
Compilation Failed, Mutant killed by the compiler
